--- a/css/gems.css
+++ b/css/gems.css
@@ -1,6 +1,6 @@
 /* Select the image with a id of ruby */
 
-/*selector for ruby goes here */  {
+#ruby {
   position: absolute;
   z-index: 1;
   top: 315px;
@@ -9,16 +9,16 @@
 
 /* Select the image with class of emerald */
 
-/*selector for emerald goes here */  {
+.emerald  {
   position: absolute;
   z-index: 2;
   top: 350px;
   left: 369px;
 }
 
-/* Select the image inside the element with an id of basket (using its descendent relationship) */
+/* Select the image inside the element with an id of beach (using its descendent relationship) */
 
-/*selector for sapphire goes here */{
+#beach img{
   position: absolute;
   z-index: 5;
   top: 315px;
