--- a/css/gems.css
+++ b/css/gems.css
@@ -18,7 +18,7 @@
 
 /* Select the image inside the element with an id of beach (using its descendent relationship) */
 
-#beach img{
+#sand img{
   position: absolute;
   z-index: 5;
   top: 315px;
@@ -27,16 +27,16 @@
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
 
-/*selector for yellow diamond goes here */ {
+#ocean + img {
   position: absolute;
   z-index: 4;
   top: 325px;
   left: 200px;
 }
 
-/* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
+/* Select the image that has an attribute value matching "Diamond" (using attribute selector) */
 
-/*selector for diamond goes here */ {
+img[alt="Diamond"] {
   position: absolute;
   z-index: 3;
   top: 300px;
