replaced old css selector

--- a/css/gems.css
+++ b/css/gems.css
@@ -16,7 +16,7 @@
   left: 369px;
 }
 
-/* Select the image inside the element with an id of basket (using its descendent relationship) */
+/* Select the image inside the element with an id of sand (using its descendent relationship) */
 
 /*selector for sapphire goes here */{
   position: absolute;
