--- a/css/gems.css
+++ b/css/gems.css
@@ -1,6 +1,6 @@
 /* Select the image with a id of ruby */
 
-/*selector for ruby goes here */ #ruby  {
+/*selector for ruby goes here */ {
   position: absolute;
   z-index: 1;
   top: 315px;
@@ -25,7 +25,7 @@
   left: 275px;
 }
 
-/* Select the image based on it being a sibling that follows immediately after the element with an id of ball (using adjacent sibling selector) */
+/* Select the image based on it being a sibling that follows immediately after the element with an id of ocean (using adjacent sibling selector) */
 
 /*selector for yellow diamond goes here */ {
   position: absolute;
@@ -34,7 +34,7 @@
   left: 200px;
 }
 
-/* Select the image that has an attribute value matching "Kitty 5" (using attribute selector) */
+/* Select the image that has an attribute value matching "Diamond" (using attribute selector) */
 
 /*selector for diamond goes here */ {
   position: absolute;
