--- a/css/gems.css
+++ b/css/gems.css
@@ -1,6 +1,6 @@
 /* Select the image with a id of ruby */
 
-/*selector for ruby goes here */ {
+#ruby {
   position: absolute;
   z-index: 1;
   top: 315px;
@@ -9,7 +9,7 @@
 
 /* Select the image with class of emerald */
 
-/*selector for emerald goes here */ {
+.emerald {
   position: absolute;
   z-index: 2;
   top: 350px;
@@ -18,7 +18,7 @@
 
 /* Select the image inside the element with an id of sand (using its descendent relationship) */
 
-/*selector for sapphire goes here */{
+#sand img{
   position: absolute;
   z-index: 5;
   top: 315px;
@@ -27,7 +27,7 @@
 
 /* Select the image based on it being a sibling that follows immediately after the element with an id of ocean (using adjacent sibling selector) */
 
-/*selector for yellow diamond goes here */ {
+#ocean + img {
   position: absolute;
   z-index: 4;
   top: 325px;
@@ -36,7 +36,7 @@
 
 /* Select the image that has an attribute value matching "Diamond" (using attribute selector) */
 
-/*selector for diamond goes here */ {
+img[alt="Diamond"]{
   position: absolute;
   z-index: 3;
   top: 300px;
